--- a/index.html
+++ b/index.html
@@ -344,9 +344,8 @@
          popOver.innerHTML += "<br>"
          popOver.innerHTML += generateUpdatedString(repo.updatedAt)
          popOver.style.display = 'none';
-         popOver.style.backgroundColor = 'white';
          popOver.style.zIndex = '1000';
-         popOver.classList.add("p-2")
+         popOver.classList.add("p-2", "bg-gray-800", "rounded", "text-white")
 
          const virtualSlider = document.createElement('div');
          virtualSlider.classList.add("flex", "flex-col", "items-center", "mt-2", "w-4", "h-4")
